--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+
+*{
+  font-family: 'Josefin Sans', sans-serif;
+}
+
 header{
   display: flex;
   height: 100vh;
@@ -9,6 +15,15 @@ header{
 .brand-name-title{
   font-size: 7em;
   font-family: "Broadway";
+}
+
+.form-input-style {
+  border: None;
+  border-bottom: 2px solid #2e2e2e;
+  background: transparent;
+  outline: None;
+  height: 40px;
+  width: 350px;
 }
 
 .form-container{
