--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -3,13 +3,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Blog Point</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <!-- Navbar content -->
-      <a class="navbar-brand" style="font-family:'Broadway';" href="{% url 'blog:home' %}">Blog Point</a>
+      <a class="navbar-brand" href="{% url 'blog:home' %}">BLOG POINT</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -17,19 +18,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+            <a class="nav-link" href="{% url 'admin:index' %}">ADMIN</a>
           </li>
 
         {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'blog:createpost' %}">Create</a>
+            <a class="nav-link" href="{% url 'blog:userprofile' %}">PROFILE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'blog:userlogout' %}">Logout</a>
+            <a class="nav-link" href="{% url 'blog:createpost' %}">CREATE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'blog:userlogout' %}">LOGOUT</a>
           </li>
         {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'blog:userlogin' %}">Login</a>
+            <a class="nav-link" href="{% url 'blog:userlogin' %}">LOGIN</a>
           </li>
         {% endif %}
         </ul>
