--- a/templates/blog/register.html
+++ b/templates/blog/register.html
@@ -3,6 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Register</title>
   </head>
@@ -15,9 +16,10 @@
         <div class="row">
           <div class="col-lg-6">
             <h3>Fill in required details below to register.</h3>
-            <form method="POST">
-              {{ form.as_p }}
+            <form method="POST" enctype="multipart/form-data">
               {% csrf_token %}
+              {{ userform.as_p }}
+              {{ userprofileform.as_p }}
               <input type="submit" class='btn btn-primary' value="Register">
             </form>
           </div>
