--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/post_detail.css' %}">
+    <link rel="stylesheet" href="{% static 'css/profile_style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/showposts_style.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Blog Point</title>
   </head>
@@ -27,6 +30,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'blog:createpost' %}">CREATE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'blog:showdrafts' %}">DRAFTS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'blog:userlogout' %}">LOGOUT</a>
