--- a/templates/blog/editpost.html
+++ b/templates/blog/editpost.html
@@ -3,18 +3,16 @@
 {% block body_block %}
 <div class="row">
   <div class="col-lg-12">
-    <br>
     <center>
-      <p>Posting as: <strong style="color:Tomato">{{ user }}</strong></p>
     <form method="POST">
       {% csrf_token %}
+      <label for="">Post Title</label>
       {{ form.post_title }}
-      <br><br>
+      <label for="">Post Content</label> <br>
       {{ form.post_text | safe }}
       {{ form.media }}
       <br><br>
-      <input type="submit" name="publish" class="btn btn-primary" value="Publish">
-      <input type="submit" name="draft" class="btn btn-primary" value="Save Draft">
+      <input type="submit" class="btn btn-primary" value="Update">
     </form>
   </div>
 </div>
