FIXED: Update and publish option in Drafts

--- a/templates/blog/editdraft.html
+++ b/templates/blog/editdraft.html
@@ -1,1 +1,20 @@
 {% extends 'blog/base.html' %}
+
+{% block body_block %}
+<div class="row">
+  <div class="col-lg-12">
+    <center>
+    <form method="POST">
+      {% csrf_token %}
+      <label for="">Post Title</label>
+      {{ form.post_title }}
+      <label for="">Post Content</label> <br>
+      {{ form.post_text | safe }}
+      {{ form.media }}
+      <br><br>
+      <input type="submit" name="publish" class="btn btn-primary" value="Publish">
+      <input type="submit" name="draft" class="btn btn-primary" value="Save as Draft">
+    </form>
+  </div>
+</div>
+{% endblock %}
