--- a/templates/blog/editpost.html
+++ b/templates/blog/editpost.html
@@ -12,7 +12,7 @@
       {{ form.post_text | safe }}
       {{ form.media }}
       <br><br>
-      <input type="submit" class="btn btn-primary" value="Update">
+      <input type="submit" name="update" class="btn btn-primary" value="Update">
     </form>
   </div>
 </div>
