--- a/templates/blog/userprofile.html
+++ b/templates/blog/userprofile.html
@@ -29,6 +29,9 @@
             <a class="nav-link" href="{% url 'blog:createpost' %}">CREATE</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'blog:showposts' %}">POSTS</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'blog:showdrafts' %}">DRAFTS</a>
           </li>
           <li class="nav-item">
